<resources>
    <string name="app_name">ExportAsImage</string>
    <string name="convert_to_png_and_save_to_sd_card">Convert to png and save to SD card</string>
    <string name="_91_8870997280">+91-8870997280</string>
    <string name="ashithvl_gmail_com">ashithvl@gmail.com</string>
    <string name="ashith_vl">Ashith VL</string>
    <string name="converted_image_appears_below">Converted Image Appears below</string>
</resources>
